fix: overflow  scroll on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1841,10 +1841,6 @@ article .anchor-title {
   overflow: auto;
 }
 
-.overflow-y-scroll {
-  overflow-y: scroll;
-}
-
 .scroll-smooth {
   scroll-behavior: smooth;
 }
@@ -2593,6 +2589,10 @@ pre code.hljs {
     --tw-divide-y-reverse: 0;
     border-top-width: calc(0px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(0px * var(--tw-divide-y-reverse));
+  }
+
+  .lg\:overflow-y-scroll {
+    overflow-y: scroll;
   }
 
   .lg\:px-14 {
